--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
     body {background: #f2f2f2};
 }
 
+@font-face {
+    font-family: quantum;
+    src: url("Quantum.otf") format("opentype");
+}
+
 .header {
     text-align: center;
     padding: 0px;
