--- a/style.css
+++ b/style.css
@@ -42,3 +42,10 @@ html {
     padding: 14px 16px;
     font-size: 17px;
 }
+
+.logo {
+    float: left;
+    font-size: 25px;
+    font-weight: 700;
+    padding: 14px 16px;
+}
