--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @media (prefers-color-scheme: dark) {
-    .navbar {background: #1e1e1e}
+    .navbar {
+        background: #1e1e1e;
+        box-shadow: 0px 1px 10px #000000;
+    }
     body {background: #1e1e1e}
     .menu a:hover:not(.active){
         color: #7712a6;
@@ -10,7 +13,10 @@
 }
 
 @media (prefers-color-scheme: light) {
-    .navbar {background: #f2f2f2}
+    .navbar {
+        background: #f2f2f2;
+        box-shadow: 0px 1px 10px #808080;
+    }
     body {background: #f2f2f2}
     .menu a:hover:not(.active){
         color: #a602f2;
@@ -33,7 +39,6 @@
 
 .navbar {
     height: 60px;
-    box-shadow: 0px 1px 10px;
     display: block;
     position: fixed;
     width: 100%;
@@ -57,7 +62,14 @@ html {
     text-decoration: none;
     padding: 14px 16px;
     font-size: 17px;
-    height: 100%;
+    height: 32px;
+    transition: 0.3s;
+    border-radius: 0px 0px 5px 5px;
+    transition: 0.3s;
+}
+
+.active:hover {
+    border-radius: 0px 0px 10px 10px;
     transition: 0.3s;
 }
 
