--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
         background: #1e1e1e;
         box-shadow: 0px 1px 10px #000000;
     }
+    .body {color: #fff}
     body {background: #1e1e1e}
     .menu a:hover:not(.active){
         color: #7712a6;
@@ -17,6 +18,7 @@
         background: #f2f2f2;
         box-shadow: 0px 1px 10px #808080;
     }
+    .body {color: #000}
     body {background: #f2f2f2}
     .menu a:hover:not(.active){
         color: #a602f2;
@@ -34,7 +36,7 @@
 .header {
     text-align: center;
     padding: 0px;
-    top: 60px;
+    display: block;
 }
 
 .navbar {
