Some work with the scrollbar

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
     }
     .active{background-color: #7712a6}
     .menu a{color: #f2f2f2}
+    .footer{
+        color:#ffffff;
+        background-color:#000000;
+    }
+    ::-webkit-scrollbar-track {background: #202020}
 }
 
 @media (prefers-color-scheme: light) {
@@ -26,6 +31,11 @@
     }
     .menu a{color: #1e1e1e}
     .active{background-color: #a602f2}
+    .footer{
+        color:#000000;
+        background-color: #ffffff;
+    }
+    ::-webkit-scrollbar-track {background: #b5b5b5}
 }
 
 @font-face {
@@ -56,6 +66,7 @@ html {
     padding: 0px;
     font-family: Oswald;
     font-weight: 700;
+    z-index: 2;
 }
 
 .menu a {
@@ -80,4 +91,48 @@ html {
     font-size: 25px;
     font-weight: 700;
     padding: 14px 16px;
+}
+
+.footer {
+    font-weight: 400;
+    display: inline-block;
+    width: 100%;
+}
+
+.legal p {
+    margin: 10px 30px 10px 30px;
+}
+
+strong {
+    font-weight: 600;
+}
+
+::-webkit-scrollbar {
+    position: absolute;
+    z-index: 1;
+    width: 10px;
+    overflow: overlay;
+    display: block;
+}
+
+::-webkit-scrollbar-track {
+    opacity: 0;
+    transition: 0.3s;
+}
+
+::-webkit-scrollbar-track:hover {
+    opacity: 1;
+    transition: 0.3s;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #A0A0A0;
+    opacity: 0;
+    transition: 0.3s;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    opacity: 1;
+    transition: 0.3s;
 }
