--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ accent {
     z-index: 1;
     margin: 20px 0% 50px 10%;
     width: 20%;
-    filter: grayscale(1);
+    filter: grayscale(1) drop-shadow(5px 5px 10px #000);
     transition: 0.3s;
 }
 
@@ -256,7 +256,9 @@ accent {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 28px;
-    color: #000;
+    filter: drop-shadow(0px 0px 5px #000);
+    color: #fff;
+    transition: 0.3s;
 }
 
 .team_game {
@@ -267,21 +269,40 @@ accent {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 20px;
-    color: #000;
+    filter: invert(94%) sepia(94%) saturate(25%) hue-rotate(359deg) brightness(105%) contrast(106%) drop-shadow(0px 0px 10px #000);
+    color: #fff;
+    transition: 0.3s;
 }
 
 .team_member {
     position: absolute;
-    top: 70%;
+    top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #000;
+    color: #fff;
     opacity: 0;
+    filter: drop-shadow(0px 0px 5px #000);
     transition: 0.3s;
 }
 
 .team_pannel:hover {
     transform: scale(1.1);
     filter: grayscale(0);
+    transition: 0.3s;
+}
+
+.team_pannel:hover > .team_member {
+    opacity: 1;
+    top: 70%;
+    transition: 0.3s;
+}
+
+.team_pannel:hover > .team_name {
+    top: 40%;
+    transition: 0.3s;
+}
+
+.team_pannel:hover > .team_game {
+    top: 50%;
     transition: 0.3s;
 }
