--- a/style.css
+++ b/style.css
@@ -281,6 +281,7 @@ accent {
     transform: translate(-50%, -50%);
     color: #fff;
     opacity: 0;
+    font-weight: 400;
     filter: drop-shadow(0px 0px 5px #000);
     transition: 0.3s;
 }
