--- a/style.css
+++ b/style.css
@@ -103,7 +103,18 @@ input {
     border: none;
     font-weight: 300;
     font-size: 16px;
-    padding-left: 16px; 
+    padding-left: 16px;
+}
+
+input.radio {
+    width: 16px;
+    height: 16px;
+    display: inline;
+    border-radius: 8px;
+    border: none;
+    font-weight: 300;
+    font-size: 16px;
+    padding-left: 16px;
 }
 
 select {
