--- a/style.css
+++ b/style.css
@@ -117,6 +117,17 @@ input.radio {
     padding-left: 16px;
 }
 
+input.inputCustom {
+    width: 30%;
+    height: 32px;
+    border: none;
+    display: inline;
+    font-weight: 300;
+    font-size: 16px;
+    padding-left: 16px;
+    background: none;
+}
+
 select {
     width: 100%;
     height: 32px;
@@ -134,6 +145,7 @@ label {
     padding-left: 32px;
     font-weight: 400;
     font-size: 18px;
+    display: inline;
 }
 
 .menu {
