--- a/style.css
+++ b/style.css
@@ -28,19 +28,30 @@
     #l_ytb {filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(132deg) brightness(101%) contrast(101%)}
     #ytb {color: #ffffff}
     input {background: #0f0f0f}
+    textarea {background: #0f0f0f}
     select {
         background: #0f0f0f;
         color: #f0f0f0;
     }
     input.inputCustom:not(:disabled) {border-bottom: 1px solid #7712a6}
     input.inputCustom:disabled {border-bottom: 1px solid #f0f0f0}
-    input[type=radio]:checked ~ .check {border: 2px solid #7712a6}
+    input[type=radio]:checked ~ .check {border: 3px solid #7712a6}
     input[type=radio]:checked ~ .check::before{background: #7712a6}
     input[type=radio]:checked ~ label{color: #7712a6}
     .label:hover label{color: #FFFFFF}
-    .label:hover .check {border: 2px solid #FFFFFF}
+    .label:hover .check {border: 3px solid #FFFFFF}
     .label{color: #AAAAAA}
-    .label .check {border: 2px solid #AAAAAA}
+    .label .check {border: 3px solid #AAAAAA}
+    .legal:before {
+        border-top: 1px #AAAAAA solid;
+        content: '';
+        display: block;
+        transform: scaleX(0.9);
+    }
+    input[type="button"] {
+        background: #7712a6;
+        color: #FFFFFF;
+    }
 }
 
 @media (prefers-color-scheme: light) {
@@ -62,20 +73,31 @@
     }
     ::-webkit-scrollbar-track {background: #b5b5b5}
     accent {color: #a602f2}
-    input {background: #f0f0f0}
+    input {background: #e0e0e0}
+    textarea {background: #e0e0e0}
     select {
-        background: #f0f0f0;
+        background: #e0e0e0;
         color: #0f0f0f;
     }
     input.inputCustom:not(:disabled) {border-bottom: 1px solid #a602f2}
     input.inputCustom:disabled {border-bottom: 1px solid #808080}
-    input[type=radio]:checked ~ .check {border: 2px solid #a602f2}
+    input[type=radio]:checked ~ .check {border: 3px solid #a602f2}
     input[type=radio]:checked ~ .check::before{background: #a602f2}
     input[type=radio]:checked ~ label{color: #a602f2}
     .label:hover label{color: #000000}
-    .label:hover .check {border: 2px solid #000000}
+    .label:hover .check {border: 3px solid #000000}
     .label{color: #555555}
-    .label .check {border: 2px solid #555555}
+    .label .check {border: 3px solid #555555}
+    .legal:before {
+        border-top: 1px #555555 solid;
+        content: '';
+        display: block;
+        transform: scaleX(0.9);
+    }
+    input[type="button"] {  
+        background: #a602f2;
+        color: #000000;
+    }
 }
 
 @font-face {
@@ -114,16 +136,67 @@ form {
     margin: 10% 20%;
 }
 
+h1 {
+    text-align: center;
+}
+
+.inscription {
+    margin: 10% 20%;
+    font-weight: 300;
+    font-size: 20px;
+}
+
 input {
     width: 100%;
-    height: 32px;
+    height: 40px;
     border-radius: 16px;
     border: none;
+    display: inline-block;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 20px;
     padding-left: 16px;
     color: inherit;
     font-family: inherit;
+    box-sizing: border-box;
+    margin-top: 4px;
+}
+
+input#contact-info {
+    display: inline-block;
+    position: absolute;
+    width: 75%;
+    right: 0;
+}
+
+input:invalid {
+   border: 1px solid red; 
+}
+
+input.inputCustom {
+    padding-bottom: 2px;
+}
+
+input.inputCustom:invalid {
+    border-bottom: 1px solid red;
+}
+
+textarea {
+    width: 100%;
+    height: 128px;
+    border-radius: 16px;
+    border: none;
+    display: inline-block;
+    font-weight: 300;
+    font-size: 20px;
+    padding: 16px;
+    color: inherit;
+    font-family: inherit;
+    box-sizing: border-box;
+    margin-top: 4px;
+}
+
+input:focus {
+    outline: none;
 }
 
 input[type="radio"] {
@@ -142,7 +215,7 @@ input[type="radio"] {
     display: flex;
     cursor: pointer;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 20px;
     padding-left: 16px;
     display: block;
     position: relative;
@@ -170,7 +243,8 @@ fieldset {
     display: block;
     position: relative;
     font-weight: 300;
-    margin: 10px 8px;
+    font-size: 20px;
+    margin: 10px 16px;
     z-index: 8;
     cursor: pointer;
     transition: border .3s linear;
@@ -181,8 +255,8 @@ fieldset {
     display: block;
     position: absolute;
     border-radius: 100%;
-    height: 16px;
-    width: 16px;
+    height: 20px;
+    width: 20px;
     top: 15px;
     left: 10px;
     z-index: 5;
@@ -195,10 +269,10 @@ fieldset {
     position: absolute;
     content: '';
     border-radius: 100%;
-    height: 8px;
-    width: 8px;
-    top: 4px;
-    left: 4px;
+    height: 10px;
+    width: 10px;
+    top: 5px;
+    left: 5px;
     margin: auto;
     transition: background 0.3s linear;
     -webkit-transition: background 0.3s linear;
@@ -206,11 +280,11 @@ fieldset {
 
 input.inputCustom {
     width: 60%;
-    height: 16px;
+    height: 20px;
     border: none;
     display: inline;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 20px;
     padding-left: 4px;
     border-radius: 0;
     background: none;
@@ -231,26 +305,34 @@ input.inputCustom:disabled {
     transform: scaleX(0);
     transition: transform 0.3s ease-in-out;
     transform-origin:  0% 50%;
-    border-bottom: none;
 }
 
 select {
     width: 100%;
-    height: 32px;
+    height: 40px;
     border-radius: 16px;
+    display: inline-block;
     border: none;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 20px;
     padding-left: 16px;
-    padding-right: 16px;
-    font: inherit;
-    font-weight: 400;
+    font-family: inherit;
+    margin-top: 4px;
+}
+
+select:focus {
+    outline: none;
+}
+
+select#contact-mean {
+    width: 20%;
+    display: inline;
 }
 
 label {
     padding-left: 16px;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 24px;
     display: inline;
     cursor: inherit;
 }
@@ -258,9 +340,25 @@ label {
 legend {
     padding-left: 16px;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 24px;
     display: inline;
     cursor: inherit;
+}
+
+input[type="button"] {
+    width: 100%;
+    height: 40px;
+    border-radius: 16px;
+    border: none;
+    display: inline-block;
+    font-weight: 300;
+    font-size: 20px;
+    padding-left: 16px;
+    color: inherit;
+    font-family: inherit;
+    box-sizing: border-box;
+    margin-top: 4px;
+    cursor: pointer;
 }
 
 .menu {
